Fixed overflow bug

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,7 @@ body * {
 .tabulator .tabulator-table {
    overflow: auto;
    height: 100%;
+   overflow: hidden;
 }
 
 .tabulator-row,
